Fixing a glitch if the title is too long.

--- a/src/now-playing/popup.css
+++ b/src/now-playing/popup.css
@@ -218,6 +218,7 @@ article{
     }
     .metadata > .album-date{
       flex: 1;
+      min-width: 60px;
       text-align: right;
     }
     .metadata > .album-title{
